<resources>
    <string name="app_name">Marvelous Portal</string>
    <string name="title_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_about_us">About us</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="published">Published:</string>
    <string name="search">Search</string>
    <string name="detail">Detail</string>
    <string name="wiki">Wiki</string>
    <string name="comic">Comic</string>
    <string name="dash">-</string>
    <string name="in_issue">: TIE-IN ISSUE</string>
    <string name="core_issues">: CORE ISSUES</string>
    <string name="characters_in_this_event">CHARACTERS IN THIS EVENT</string>
    <string name="characters">Characters</string>
    <string name="events">Events</string>
    <string name="series">Series</string>
    <string name="comics">Comics</string>
    <string name="public_key">bae8d2281a0d569b0cfd5fbc7cd6ee6f</string>
    <string name="private_key">8ec9a86b449cfdacb2a0129a896ea35ef6fe98fc</string>
    <string name="description_not_available">Description is not available</string>
    <string name="app_version">App version:</string>
    <string name="powered_by">Powered by:</string>
    <string name="data_provided_by_marvel_2018_marvel">Data provided by Marvel. © 2018 MARVEL</string>
    <string name="copyright">Copyright:</string>
    <string name="_2018_marvel">© 2018 MARVEL</string>
    <string name="save">Save</string>
</resources>