<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/nav_characters"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/characters"/>
        <item
            android:id="@+id/nav_comics"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/comics"/>
        <item
            android:id="@+id/nav_series"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/series"/>
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/events"/>
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share"/>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send"/>
        </menu>
    </item>

</menu>
